@@ -1,5 +1,17 @@
 2021-08-26  Wenson Hsieh  <wenson_hsieh@apple.com>
 
+        Fix a typo in `ArgumentCoder<Ref<Font>>::decode()`
+        https://bugs.webkit.org/show_bug.cgi?id=229596
+
+        Reviewed by Tim Horton.
+
+        Change `renderingRersouceIdentifier` to `renderingResourceIdentifier`.
+
+        * Shared/WebCoreArgumentCoders.cpp:
+        (IPC::ArgumentCoder<Ref<Font>>::decode):
+
+2021-08-26  Wenson Hsieh  <wenson_hsieh@apple.com>
+
         Add type-safe transaction identifiers for EditorState and FocusedElementInformation
         https://bugs.webkit.org/show_bug.cgi?id=229571
 
